[FIX] Add space for progress bar on small devices

--- a/src/assets/style/scss/article.scss
+++ b/src/assets/style/scss/article.scss
@@ -208,3 +208,10 @@ table {
     transition: width 0.6s ease;
   }
 }
+
+.logo-bar {
+  // add space for progress bar on small devices
+  @include max-width($extra-small) {
+    margin-top: $spacing;
+  }
+}
